# mpche

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ext_plotter.py  histogram.ipynb  mpche.cpp  plotter.py
docs/: documentation.html  documentation.org
headers/: HistogramHelper.h  ParallelFastLHE.h  ParallelLHE.h  SerialLHE.h  VideoCreator.h  ocv_wrappers.h  video_create.h  video_extract.h
utils/: HistogramHelper.cpp  ParallelFastLHE.cpp  ParallelLHE.cpp  SerialLHE.cpp  VideoCreator.cpp  ocv_wrappers.cpp  video_create.cpp  video_extract.cpp
